chore(AppContainer): fix white flicker when opening tab (#1102)

--- a/src/renderer/browser/components/DAppContainer/DAppContainer.scss
+++ b/src/renderer/browser/components/DAppContainer/DAppContainer.scss
@@ -4,6 +4,13 @@
 
   .webview {
     height: 100%;
-    background-color: white;
+
+    &Loaded {
+      background-color: white;
+    }
+
+    &Loading {
+      background-color: transparent;
+    }
   }
 }
